--- a/index.html
+++ b/index.html
@@ -444,7 +444,8 @@ adaptive PRFs.
 					</span></span></span></strong><span class="style14"><br><span style="font-weight: 400;">
 					<span dir="LTR" class="style14">TCC 2013
 					<span class="style11">[</span><a href="papers/PowerofRO1/PowerOfRO_TCC.pdf">PDF</a><strong><span class="style11">]</span></strong><br>Draft of full version
-					<a href="papers/PowerofRO1/PowerOfRO.pdf">[PDF]</a></span></span></span></p>
+					</span></span></span>
+					<a href="papers/PowerofRO1/PowerOfRO.pdf">[PDF]</a></p>
 		
 
 <div class="box" id="abstract-PowerofRO1" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
@@ -493,12 +494,14 @@ be black-box reduced to the existence of one-way functions.
 
 
   <li>
-					<p><span dir="LTR"><span class="style14">Itay Berman</span></span><span style="font-weight: 400;"><span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">
+					<p class="auto-style7"><span dir="LTR"><span class="style14">Itay Berman</span></span><span style="font-weight: 400;"><span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">
 					and Iftach Haitner</span> </span>
 		  </span><br>
-					<strong>From Non-Adaptive to Adaptive Pseudorandom Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;">[<a href="javascript:toggle('abstract-adaptivePRF')">Abstract</a><span class="style11">]</span><span dir="LTR" class="style14">&nbsp;</span></span></strong><br>
+					<strong>From Non-Adaptive to Adaptive Pseudorandom Functions</strong><span class="style14"><strong><span class="style11">&nbsp;</span><span style="font-weight: 400;"><a href="javascript:toggle('abstract-adaptivePRF')">[Abstrac</a></span></strong><span style="font-weight: 400;"><a href="javascript:toggle('abstract-adaptivePRF')">t<span class="style11">]</span></a></span><br>
 					TCC 2012 <span style="font-weight: 400;">
 					<span dir="LTR" class="style14">
+					<a href="papers/AdaptivePRF/AdaptivePRF.pdf">[PDF]</a></span></span></span><br><span class="style14"><span style="font-weight: 400;">
+					<span dir="LTR" class="style14">Draft of full version
 					<a href="papers/AdaptivePRF/AdaptivePRF.pdf">[PDF]</a></span></span></span></p>
 					</li>
 					
@@ -584,6 +587,9 @@ We make progress towards answering the above fundamental question, showing that
 .auto-style6 {
 	color: #000000;
 	font-size: small;
+}
+.auto-style7 {
+	direction: ltr;
 }
 </style>
 The hash-and-sign RSA signature is one of the most elegant and well known 
@@ -671,7 +677,9 @@ or alternatively a black-box use of lower-level primitives such as enhanced trap
 					<span class="style5">SIAM 
 		  Journal of Computing 2013</span></span></span></span><br>Annual ACM Symposium on Theory of Computing (STOC), 2010</span> <span class="style14"><span style="font-weight: 400;"><span dir="LTR" class="style14">
 					<a href="papers/HillRevisted/HillRevisted_STOC.pdf">[PDF]</a></span></span><span dir="LTR"><a href="papers/FindingCollisions/FindingCollisions.ps"></a></span></span><span style="font-weight: 400;"><span class="style14"><span dir="LTR" class="style14"><br>Draft of full version
-					<a href="papers/HillRevisted/HillRevisted_Full.pdf">[PDF]</a></span></span></span></h2>
+					<a href="papers/HillRevisted/HillRevisted_Full.pdf">[PDF]</a> <span dir="LTR"><span style="color: blue;"> 
+		  		  <b>
+					<span dir="LTR" style="font-weight: 400"><img height="12" src="updated.gif" width="60"></span></b></span></span></span></span></span></h2>
 		  <span style="font-weight: 400;">
 		  		  <div class="box" id="abstract-HillRevisted" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 					  <h2><span style="font-weight: 400;">We give a new construction of pseudorandom generators from any one-way 
@@ -894,12 +902,11 @@ long as the verifier is also given a good approximation of the value
 		  [</span><a href="papers/ArgumentPR/Seminar.pptx">S<span class="style11">lides</span></a><span class="style11">]
 		  <br><span class="style5">S<span dir="LTR" class="style14">IAM 
 		  Journal of Computing 2013</span></span></span></span></span></b></span><span style="font-weight: 400;"><span dir="LTR" style="font-weight: 400"><b><br></b></span>IEEE Symposium on Foundations of Computer Science 
-		  (FOCS), 2009 <span dir="LTR"><b>
-		  <span class="style14"><span class="style11">[</span><a href="papers/ArgumentPR/ArgumentPR_CR.pdf">PDF</a><span class="style11">]</span><span class="style5">
-		  </span></span></b></span>
-		  <br><span style="font-weight: 400;">Draft of full version
+		  (FOCS), 2009<br><span style="font-weight: 400;">Draft of full version
 				<a href="papers/ArgumentPR/ArgumentPR.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b>
-		  </span></span></h2>
+		  <span class="style14"><span dir="LTR" class="style14"><span dir="LTR"><span style="color: blue;"> 
+		  <b>
+					<span dir="LTR" style="font-weight: 400"><img height="12" src="updated.gif" width="60"></span></b></span></span></span></span></span></span></h2>
 		  
 		   <div class="box" id="abstract-ParallelRepetition" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">The question whether or not parallel repetition reduces the soundness error 
@@ -1196,16 +1203,22 @@ Constructions Based on One-way Functions</b></span><br>
 				</span><a href="papers/IneractiveHashing/IneractiveHashing-CCC.ps"></a>
 		  <span class="style11">[</span><a href="papers/IneractiveHashing/IHSeminar_F.ppt">Slides</a><span class="style5">]<br><span class="style14">
 		  <span dir="LTR" style="font-weight: 400">
-		  <b><i> <span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">Journal of Cryptology 2013</span></span></i></b></span></span></span></span></span><span class="style14"><br>
+		  <b><i> <span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">Journal of Cryptology 2013&nbsp; <span style="color: blue;">
+		  <a class="style5" href="http://link.springer.com/article/10.1007/s00145-012-9139-0">[link]</a>
+		  <o:p></o:p>
+		  </span></span></span></i></b></span></span></span></span></span><span class="style14"><br>
 		  IEEE Conference on Computational Complexity&nbsp; (CCC), 2007
-		  <span dir="LTR" style="font-weight: 400">
-		  <a href="papers/IneractiveHashing/IneractiveHashing-CCC.pdf">[PDF]</a><b><i> </i>
-		  </b></span></span><span style="color: blue;"><br>
+		  <span style="font-weight: 400;"> 
+		  <span style="color: blue;">
+		  <a class="style5" href="papers/IneractiveHashing/IneractiveHashing_Jour.pdf">[PDF]</a><b><i>
+		  <o:p></o:p>
+		  </i></b></span></span></span><span style="color: blue;"><br>
 		  </span><span class="style14"><span class="style5">Draft of full version 
 		  </span><span style="color: blue;">
-		  <a href="papers/IneractiveHashing/IneractiveHashing_Jour_1.pdf" class="style5">[PDF]</a></span></span><span style="color: blue;"><b><i>
-		  <o:p></o:p>
-		  </i></b></span></h2>
+		  <a class="style5" href="papers/IneractiveHashing/IneractiveHashing_Jour.pdf">[PDF]</a></span></span><span style="color: blue;"><b><i>
+		  <o:p><span style="font-weight: 400;"> 
+		  <span class="style14"><span dir="LTR" class="style14"><span dir="LTR">
+					<span dir="LTR" style="font-weight: 400"><img height="12" src="updated.gif" width="60"></span></span></span></span></span></o:p></i></b></span></h2>
 		  <div class="box" id="abstract-IH" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">Interactive hashing, introduced by <span class="style1">Naor, Ostrovsky, Venkatesan and Yung (CRYPTO '92)</span>,
 plays an important role in many cryptographic protocols. In particular,
@@ -1257,7 +1270,7 @@ that the receiver does not learn any additional information on
 		  <span class="style14"><span dir="LTR">S</span><span dir="LTR" class="style14"><span dir="LTR">IAM 
 		  Journal of Computing 2011<span style="color: blue;"> 
 		  <a href="papers/RandomizedIteate/RandomIterate_SICOMP.pdf">[PDF]</a><b>&nbsp;
-					<span dir="LTR" style="font-weight: 400"><img height="12" src="updated.gif" width="60"></span></b></span></span></span></span><br>Advanced in Cryptology - CRYPTO, 2006
+					</b></span></span></span></span><br>Advanced in Cryptology - CRYPTO, 2006
 				<a href="papers/RandomizedIteate/Randomized_Iterate_CryptoCR.pdf">[PDF]</a></span></h2>
 		  <div class="box" id="abstract-RI" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">We consider two of the
