--- a/index.html
+++ b/index.html
@@ -639,9 +639,16 @@ of signing queries is <strong>a-priori bounded</strong>.
 					<span class="style14"><strong>Black-Box Constructions of 
 					Protocols for Secure Computation <span style="font-weight: 400;">[<a href="javascript:toggle('abstract-BBMPX')">Abstract</a>]</span>&nbsp;</strong><br>
 		  <span style="font-weight: 400;"><span dir="LTR">S</span><span dir="LTR" class="style14"><span dir="LTR">IAM 
-		  Journal of Computing 2011</span></span></span></span>
+		  Journal of Computing 2011</span></span></span></span><i> </i>
 					<span style="font-weight: 400;"><span class="style14">
 					<span dir="LTR" class="style14">
+		  <span dir="LTR"><span class="style5">
+		  <span dir="LTR" style="font-weight: 400">
+		  <b><span dir="LTR" style="font-weight: 400;"> <span style="color: blue;">
+		  		  <a class="style5" href="http://epubs.siam.org/doi/pdf/10.1137/100790537">[link]</a><i> 
+		  <o:p></o:p>
+		  		  </i>
+		  </span></span></b></span></span></span><br>Draft of full version
 					<a href="papers/BlackBoxMPC/black-box-mpc.pdf">[PDF]</a><a href="papers/FindingCollisions/FindingCollisions.ps"></a><b><i><o:p></o:p></i></b> </span></span></span></h2>
 					</li>
 					
@@ -946,8 +953,19 @@ original verifier would.
 		  </span></b></span><br>
 		  <span style="font-weight: 400;"><span dir="LTR">S</span><span dir="LTR" class="style14"><span dir="LTR">IAM 
 		  Journal of Computing 2009</span></span></span><span class="style14"><b><i><span style="font-weight: 400;"> 
-		  </span></i></b>
-		  <a href="papers/HNORV/HNORV-sicomp.pdf">[PDF]</a></span></h2>
+		  </span></i></b><span style="font-weight: 400;">
+		  <span dir="LTR" class="style14">
+					<span dir="LTR"><span class="style5">
+		  <span dir="LTR" style="font-weight: 400">
+		  <b><span dir="LTR" style="font-weight: 400;">
+		  <span style="color: blue;">
+		  <a class="style5" href="http://epubs.siam.org/doi/pdf/10.1137/080725404">[link]</a><i> 
+		  <o:p></o:p>
+		  </i>
+		  </span></span></b></span></span></span> </span></span><br><span style="font-weight: 400;">Draft of full version
+				</span></span><span style="font-weight: 400;"> 
+		  <span class="style14">
+		  <a href="papers/HNORV/HNORV-sicomp.pdf">[PDF]</a> </span></span></h2>
 		  </li>
 		  <li>
 					<h2><span dir="LTR" style="font-weight: 400;">Iftach Haitner, </span>
@@ -1203,8 +1221,10 @@ Constructions Based on One-way Functions</b></span><br>
 				</span><a href="papers/IneractiveHashing/IneractiveHashing-CCC.ps"></a>
 		  <span class="style11">[</span><a href="papers/IneractiveHashing/IHSeminar_F.ppt">Slides</a><span class="style5">]<br><span class="style14">
 		  <span dir="LTR" style="font-weight: 400">
-		  <b><i> <span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">Journal of Cryptology 2013&nbsp; <span style="color: blue;">
-		  <a class="style5" href="http://link.springer.com/article/10.1007/s00145-012-9139-0">[link]</a>
+		  <b><i> <span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">Journal of Cryptology 
+		  <span class="style23">2013</span>&nbsp; <span style="color: blue;">
+		  <span class="style23">
+		  <a class="style5" href="http://link.springer.com/article/10.1007/s00145-012-9139-0">[link]</a></span>
 		  <o:p></o:p>
 		  </span></span></span></i></b></span></span></span></span></span><span class="style14"><br>
 		  IEEE Conference on Computational Complexity&nbsp; (CCC), 2007
@@ -1269,9 +1289,17 @@ that the receiver does not learn any additional information on
 		  <span style="font-weight: 400;">
 		  <span class="style14"><span dir="LTR">S</span><span dir="LTR" class="style14"><span dir="LTR">IAM 
 		  Journal of Computing 2011<span style="color: blue;"> 
-		  <a href="papers/RandomizedIteate/RandomIterate_SICOMP.pdf">[PDF]</a><b>&nbsp;
-					</b></span></span></span></span><br>Advanced in Cryptology - CRYPTO, 2006
-				<a href="papers/RandomizedIteate/Randomized_Iterate_CryptoCR.pdf">[PDF]</a></span></h2>
+		  <span class="style5"><span dir="LTR" style="font-weight: 400">
+		  <b><span dir="LTR" style="font-weight: 400;">
+		  <a class="style5" href="http://epubs.siam.org/doi/pdf/10.1137/080721820">[link]</a><i> 
+		  <o:p></o:p>
+		  </i></span></b></span></span></span></span></span></span><br>Advanced in Cryptology - CRYPTO, 2006
+				<a href="papers/RandomizedIteate/Randomized_Iterate_CryptoCR.pdf">[PDF]</a></span><br><span class="style14"><span class="style5"><span style="font-weight: 400;"> 
+		  Draft of full version 
+		  <span dir="LTR" class="style14"><span dir="LTR"><span style="color: blue;"> 
+		  <a href="papers/RandomizedIteate/RandomIterate.pdf">[PDF]</a><b>&nbsp;
+					</b></span></span></span></span> 
+		  </span></span></h2>
 		  <div class="box" id="abstract-RI" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">We consider two of the
 					most fundamental theorems in Cryptography. The first, due to
@@ -1361,61 +1389,27 @@ that the receiver does not learn any additional information on
 				[</span><a href="papers/SCfromRegularOWF/SCfromRegularOWF.pps">Slides</a><span class="style11">]</span><b><span dir="LTR" class="style14">
 		  </span></b></span></span><span dir="LTR" class="style14"><span style="font-weight: 400;"><span dir="LTR" style="font-weight: 400;"><br>
 		  Journal of Cryptology 2009
-		  <a href="papers/SCfromRegularOWF/SCfromRegularOWF-JOC.pdf">[PDF]</a><!--[if gte vml 1]><v:shapetype id="_x0000_t75"
+		  <span class="style14"><span dir="LTR"><span style="color: blue;"> 
+		  <span class="style5"><span dir="LTR" style="font-weight: 400">
+		  <a class="style5" href="http://link.springer.com/content/pdf/10.1007/s00145-007-9012-8">[link]</a><b><i> </i></b></span></span></span></span></span><!--[if gte vml 1]><v:shapetype id="_x0000_t75"
 
  coordsize="21600,21600" o:spt="75" o:preferrelative="t" path="m@4@5l@4@11@9@11@9@5xe"
 
  filled="f" stroked="f">
 
-		  <v:stroke joinstyle="miter" xmlns:v="urn:schemas-microsoft-com:vml"/>
+		  &nbsp;<v:stroke joinstyle="miter" xmlns:v="urn:schemas-microsoft-com:vml"/><v:formulas><v:f eqn="if lineDrawn pixelLineWidth 0" xmlns:v="urn:schemas-microsoft-com:vml"/><v:f eqn="sum @0 1 0" xmlns:v="urn:schemas-microsoft-com:vml"/><v:f eqn="sum 0 0 @1" xmlns:v="urn:schemas-microsoft-com:vml"/><v:f eqn="prod @2 1 2" xmlns:v="urn:schemas-microsoft-com:vml"/><v:f eqn="prod @3 21600 pixelWidth" xmlns:v="urn:schemas-microsoft-com:vml"/><v:f eqn="prod @3 21600 pixelHeight" xmlns:v="urn:schemas-microsoft-com:vml"/><v:f eqn="sum @0 0 1" xmlns:v="urn:schemas-microsoft-com:vml"/><v:f eqn="prod @6 1 2" xmlns:v="urn:schemas-microsoft-com:vml"/><v:f eqn="prod @7 21600 pixelWidth" xmlns:v="urn:schemas-microsoft-com:vml"/><v:f eqn="sum @8 21600 0" xmlns:v="urn:schemas-microsoft-com:vml"/><v:f eqn="prod @7 21600 pixelHeight" xmlns:v="urn:schemas-microsoft-com:vml"/><v:f eqn="sum @10 21600 0" xmlns:v="urn:schemas-microsoft-com:vml"/></v:formulas><v:path o:extrusionok="f" gradientshapeok="t" o:connecttype="rect" xmlns:v="urn:schemas-microsoft-com:vml"/><o:lock v:ext="edit" aspectratio="t" xmlns:o="urn:schemas-microsoft-com:office:office"/></v:shapetype><v:shape id="_x0000_i1025" type="#_x0000_t75" style='width:45pt;
 
-		  <v:formulas>
-
-		  <v:f eqn="if lineDrawn pixelLineWidth 0" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  <v:f eqn="sum @0 1 0" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  <v:f eqn="sum 0 0 @1" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  <v:f eqn="prod @2 1 2" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  <v:f eqn="prod @3 21600 pixelWidth" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  <v:f eqn="prod @3 21600 pixelHeight" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  <v:f eqn="sum @0 0 1" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  <v:f eqn="prod @6 1 2" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  <v:f eqn="prod @7 21600 pixelWidth" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  <v:f eqn="sum @8 21600 0" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  <v:f eqn="prod @7 21600 pixelHeight" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  <v:f eqn="sum @10 21600 0" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  </v:formulas>
-
-		  <v:path o:extrusionok="f" gradientshapeok="t" o:connecttype="rect" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  <o:lock v:ext="edit" aspectratio="t" xmlns:o="urn:schemas-microsoft-com:office:office"/>
-
-		  </v:shapetype>
-
-		  <v:shape id="_x0000_i1025" type="#_x0000_t75" style='width:45pt;
-
- height:9pt'>
-
-		  <v:imagedata src="papers/index_files/image001.gif" o:title="updated" xmlns:v="urn:schemas-microsoft-com:vml"/>
-
-		  </v:shape>
-
-		  <![endif]--><br></span></span>Advances in Cryptology - Eurocrypt,
+ height:9pt'><v:imagedata src="papers/index_files/image001.gif" o:title="updated" xmlns:v="urn:schemas-microsoft-com:vml"/></v:shape><![endif]--><br></span></span>Advances in Cryptology - Eurocrypt,
 				2005</span> <span style="font-weight: 400;">
 		  <span dir="LTR" class="style14">
 		  <a href="papers/SCfromRegularOWF/SCfromRegularOWF-eurocrypt.pdf">[PDF]</a>
-		  </span></span></h2>
+		  <br><span class="style14"><span class="style5">Draft of full version 
+		  <span dir="LTR" style="font-weight: 400;"><span dir="LTR"><span style="color: blue;"> 
+		  <span dir="LTR" style="font-weight: 400">
+		  <b><i> 
+		  <o:p></o:p>
+		  </i></b></span></span></span>
+		  <a href="papers/SCfromRegularOWF/SCfromRegularOWF-JOC.pdf">[PDF]</a></span></span></span></span></span></h2>
 		  <div class="box" id="abstract-SHCfromRegOWF" style="border-style: solid; border-width: 1px; padding: 1px 4px; display: none; background-color: rgb(255, 255, 255);">
 			  <h2><span style="font-weight: 400;">We revisit the following
 			  question: <em>what are the minimal assumptions needed to construct
