--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@ Constructions Based on One-way Functions</b></span><br>
 		  <b><i> <span dir="LTR" class="style14"><span dir="LTR" style="font-weight: 400;">Journal of Cryptology 
 		  <span class="style23">2013</span>&nbsp; <span style="color: blue;">
 		  <span class="style23">
-		  <a class="style5" href="http://link.springer.com/article/10.1007/s00145-012-9139-0">[link]</a></span>
+		  <a class="style5" href="http://link.springer.com/content/pdf/10.1007/s00145-012-9139-0">[link]</a></span>
 		  <o:p></o:p>
 		  </span></span></span></i></b></span></span></span></span></span><span class="style14"><br>
 		  IEEE Conference on Computational Complexity&nbsp; (CCC), 2007
