--- a/index.html
+++ b/index.html
@@ -362,12 +362,11 @@ DIV.Section1 {
           <table id="AutoNumber12" style="width: 71%;" class="style20" align="center" border="0" bordercolor="#111111">
 
     <tr>  <td align="left">
- 	   <span class="style16" ><b>Teaching </b><br> </span>
- 	   <span class="auto-style6">
-		<a <font="" href="Courses/FOC/Fall11/index.html" size="2">Foundation of 
-		Cryptography (Fall 11)</a>,
-		<a <font="" href="Courses/Seminars/ComComp/index.html" size="2">Student 
-		seminar on Communication Complexity (Fall 12)</a></span><br></tr>
+ 	   <span class="style16" ><b>Teaching </b><br> <span class="auto-style6">
+		<a <font="" href="http://tau-cm2013.wikidot.com/" size="2">Computational 
+		Model (Spring 13)</a>,
+		<a <font="" href="Courses/FOC/Spring13/index.html" size="2">Foundation 
+		of Cryptography (Spring 13)</a></span></span><br></tr>
  </table>
 
 
