--- a/Courses/FOC/Spring13/index.html
+++ b/Courses/FOC/Spring13/index.html
@@ -36,7 +36,7 @@
 
 <h1>Foundation of Cryptography </h1>
 
-Tuesdays 10:00-13:00, Room: דן דויד  210 <br /><br />
+	 Tuesdays 10:00-13:00, Room: Shriber 007<br /><br />
 
 <b>Instructor:</b> <a href="http://www.cs.tau.ac.il/~iftachh" target="_blank">Iftach Haitner</a> | Schreiber 20<br /><br />
 
