--- a/Courses/FOC/Spring13/schedule.html
+++ b/Courses/FOC/Spring13/schedule.html
@@ -68,7 +68,8 @@ and , basic notations and One-Way Functions [<a href="Slides/OWF.pdf" target="_b
 <tr>
 <td style="width: 7%">3</td>
 <td style="width: 14%">March . 12</td>
-<td>Computational Iindistinguishability and Pseudorandom Generators</td>
+<td>One-Way Functions continues and <br />
+Computational Iindistinguishability and Pseudorandom Generators [<a href="Slides/Pseudorandomness.pdf" target="_blank">slides</a>]</td>
 </tr>
 
 <tr>
