--- a/Courses/FOC/Spring13/schedule.html
+++ b/Courses/FOC/Spring13/schedule.html
@@ -56,7 +56,8 @@
 <td style="width: 7%">1</td>
 <td style="width: 14%">Feb 26. 1</td>
 <td>Introduction; Administrativia and course topics [<a href="Slides/Introduction_admin.pdf" target="_blank">slides</a>] 
-and , basic notations and One-Way Functions [<a href="Slides/OWF.pdf" target="_blank">slides</a>]</td>
+and , basic notations and One-Way Functions <br />
+[<a href="Slides/OWF_Slides.pdf" target="_blank">Slides</a>] [<a href="Printouts/OWF_PO.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
@@ -68,14 +69,14 @@ and , basic notations and One-Way Functions [<a href="Slides/OWF.pdf" target="_b
 <tr>
 <td style="width: 7%">3</td>
 <td style="width: 14%">March . 12</td>
-<td>One-Way Functions continues and <br />
-Computational Iindistinguishability and Pseudorandom Generators [<a href="Slides/Pseudorandomness.pdf" target="_blank">slides</a>]</td>
+<td>One-Way Functions continues </td>
 </tr>
 
 <tr>
 <td style="width: 7%">4</td>
 <td style="width: 14%">March . 19</td>
-<td>Hardcore Predicates for any one-way function </td>
+<td>Pseudorandom Generators [<a href="Slides/Pseudorandomness_Slides.pdf" target="_blank">Slides</a>] 
+[<a href="Printouts/Pseudorandomness_PO.pdf" target="_blank">PO</a>]</td>
 </tr>
 
 <tr>
@@ -89,13 +90,13 @@ Computational Iindistinguishability and Pseudorandom Generators [<a href="Slides
 <tr>
 <td style="width: 7%">6</td>
 <td style="width: 14%">April 2</td>
-<td>Pseudorandom Functions </td>
+<td>Hardcore Predicates </td>
 </tr>
 
 <tr>
 <td style="width: 7%">7</td>
 <td style="width: 14%">April 9</td>
-<td>Pseudorandom Permutations</td>
+<td>Pseudorandom Functions</td>
 </tr>
 
 <tr>
@@ -148,7 +149,7 @@ Computational Iindistinguishability and Pseudorandom Generators [<a href="Slides
 <tr>
 <td style="width: 7%">16</td>
 <td style="width: 14%">June 11</td>
-<td>Secure Computation cont. and&nbsp; Summary </td>
+<td>Secure Computation&nbsp; </td>
 </tr>
 
 <tr>
