--- a/Courses/FOC/Fall11/index.html
+++ b/Courses/FOC/Fall11/index.html
@@ -57,7 +57,9 @@ Tuesdays 10:00-13:00, Room: דן דויד  210 <br /><br />
 	 <li> Problem set 4 is out. Due date Jan 5.
 	 <li> Problem set 5 is out. Due date Jan 16.
 	 <li> <strong><span class="auto-style2">No class </span></strong>next 
-	 Tuesday&nbsp; (January 10).<li> Problem set 6 is out. Due date Feb 16.</ol>
+	 Tuesday&nbsp; (January 10).<li> Problem set 6 is out. Due date Feb 16.<li> 
+	 You can find the <strong>printouts</strong> of the slides
+	 <a href="Printouts">here</a></ol>
 
 </div></div></div>
 </body>
