--- a/Courses/FOC/Spring13/index.html
+++ b/Courses/FOC/Spring13/index.html
@@ -52,6 +52,8 @@
   <a href="http://www.cs.tau.ac.il/cseminar/">here</a>.</li>
   <li> <strong><span class="auto-style2">No class </span></strong>&nbsp;next 
 	 Tuesday&nbsp; (March 5).</li>
+	 <li> <a href="ProblemSets/PS1.pdf">PS1</a> is out, due date April 2 (in 
+	 class)&nbsp; . </li>
      </ol>
 
 </div>
