--- a/Courses/FOC/Spring13/schedule.html
+++ b/Courses/FOC/Spring13/schedule.html
@@ -84,19 +84,19 @@ and , basic notations and One-Way Functions <br />
 <td style="width: 14%">March. 26</td>
 <td class="auto-style3">
 
-<strong>No Class, Pesach.</strong></td>
+<strong>No Class, Pesach</strong></td>
 </tr>
 
 <tr>
 <td style="width: 7%">6</td>
 <td style="width: 14%">April 2</td>
-<td>Hardcore Predicates </td>
+<td class="auto-style3"><strong>No Class, Pesach</strong></td>
 </tr>
 
 <tr>
 <td style="width: 7%">7</td>
 <td style="width: 14%">April 9</td>
-<td>Pseudorandom Functions</td>
+<td>Hardcore Predicates&nbsp; </td>
 </tr>
 
 <tr>
@@ -108,19 +108,19 @@ and , basic notations and One-Way Functions <br />
 <tr>
 <td style="width: 7%">9</td>
 <td style="width: 14%">April 23</td>
-<td>Commitment Schemes and Zero Knowledge for NP&nbsp;&nbsp;</td>
+<td>Pseudorandom Functions</td>
 </tr>
 
 <tr>
 <td style="width: 7%">10</td>
 <td style="width: 14%">April&nbsp; 30</td>
-<td>Non Interactive Zero Knowledge&nbsp; </td>
+<td>Commitment Schemes and Zero Knowledge for NP&nbsp;&nbsp;</td>
 </tr>
 
 <tr>
 <td style="width: 7%">11</td>
 <td style="width: 14%">May 7</td>
-<td>MACs and Signature Schemes</td>
+<td>Non Interactive Zero Knowledge&nbsp; </td>
 </tr>
 
 <tr>
@@ -132,19 +132,19 @@ and , basic notations and One-Way Functions <br />
 	<tr>
 <td style="width: 7%">13</td>
 <td style="width: 14%">May 21</td>
-<td>Encryption Schemes </td>
+<td>MACs and Signature Schemes</td>
 	</tr>
 
 <tr>
 <td style="width: 7%">14</td>
 <td style="width: 14%">May 28</td>
-<td>Encryption Schemes cont.&nbsp;</td>
+<td>Encryption Schemes &nbsp;</td>
 </tr>
 
 <tr>
 <td style="width: 7%">15</td>
 <td style="width: 14%">June 4</td>
-<td>Encryption Schemes cont. and Secure Computation&nbsp;</td>
+<td>Encryption Schemes cont. </td>
 </tr>
 <tr>
 <td style="width: 7%">16</td>
