--- a/index.html
+++ b/index.html
@@ -231,13 +231,22 @@ DIV.Section1 {
       My main research interests are
 	  Cryptography and Computational Complexity.<br>
 
-	 <span class="style4">[<a href="javascript:MySwitch('Info','Bio')">Short Bio</a><span class="style18">] </span>
+    [<span><a href="javascript:MySwitch('Bio','Info')">Contact Info</a></span>]
+	  
+	 [<a href="javascript:MySwitch('Info','Bio')">Short Bio</a>]
 
-	  [<span class="style5"><a href="javascript:MySwitch('Bio','Info')">Contact Info</a></span></span><span class="style18">]</span><span class="style4"><div class="box" id="Bio" style="border-style: solid; border-width: 1px; padding: 5px 4px; display: none; background-color: rgb(255, 255, 255);">
-     <span class="style18"><font class="style18"><b>Biography</b></font></span> <span class="style21">
+	  [<a href="javascript:MySwitch('Info','Bio')">Proffestional Activity</a>]
+
+     [<a href="javascript:MySwitch('Info','Bio')">Other</a>]
+
+
+	  <span><div class="box" id="Bio" style="border-style: solid; border-width: 1px; padding: 5px 4px; display: none; background-color: rgb(255, 255, 255);">
+     <span ><font class="style18"><b>Biography</b></font></span> <span class="style21">
 
 					<span style="font-weight: 400;"><br class="style4"></span>
 		</span>
+
+
 
 	    <span class="style21">
 	  <span style="font-weight: 400;"><span class="style4">Since 2010 I am at the  <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Untill July 2010,
