--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ DIV.Section1 {
 
 
 	    <span class="style21">
-	  <span style="font-weight: 400;"><span class="style4">Since 2010 I am at the  <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Untill July 2010,
+	  <span style="font-weight: 400;"><span class="style4">I am a member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Untill July 2010,
       I was a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
 	  Research New England</a>.<br> Prior to the time at Microsoft Research, I did a six
 		months postdoc at <a href="http://www.cs.haifa.ac.il/"><font>Department
