--- a/index.html
+++ b/index.html
@@ -225,9 +225,7 @@ DIV.Section1 {
 	  <span class="style11" style="">
 	  <span class="style5">
 
-	  I am a member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. Untill July 2010,
-      I was a postdoctoral researcher at <a href="http://research.microsoft.com/en-us/labs/newengland/">Microsoft
-	  Research New England</a>.<br>
+	  I am a member of the <a href="http://www.cs.tau.ac.il">School of Computer Science</a> at <a href="http://www.tau.ac.il">Tel Aviv University</a>. <br>
       My main research interests are
 	  Cryptography and Computational Complexity.<br>
 
@@ -237,7 +235,7 @@ DIV.Section1 {
 
 	  [<a href="javascript:MySwitch('ProActiv','Info','Bio','OtherA')">Proffestional Activity</a>]
 
-     [<a href="javascript:MySwitch('OtherA','Info','Bio','ProActiv')">Other</a>]
+     [<a href="javascript:MySwitch('OtherA','Info','Bio','ProActiv')">Teaching</a>]
 
 
 	  <span><div class="box" id="Bio" style="border-style: solid; border-width: 1px; padding: 5px 4px; display: none; background-color: rgb(255, 255, 255);">
@@ -359,12 +357,12 @@ DIV.Section1 {
 		 </div>
 
 
-<span><div class="box" id="OtherA" style="border-style: solid; border-width: 1px; padding: 5px 4px; display: none; background-color: rgb(255, 255, 255);">
-     					<span style="font-weight: 400;"><br class="style4"></span>
-		</span>
+<div class="box" id="OtherA" style="border-style: solid; border-width: 1px; padding: 5px 4px; display: none; background-color: rgb(255, 255, 255);">
+     					<span style="font-weight: 400;"></span>
+        <li>  <a <font="" href="http://tau-cm2013.wikidot.com/" size="2">Computational Model (Spring 13)</a></li><li>
 
-
-
+		<a <font="" href="Courses/FOC/Spring13/index.html" size="2">Foundation of Cryptography (Spring 13)</a></li>
+        
 	    </div>
 
 
@@ -424,16 +422,7 @@ DIV.Section1 {
 </table>
 
  <table align="center" >
-          <table id="AutoNumber12" style="width: 71%;" class="style20" align="center" border="0" bordercolor="#111111">
-
-    <tr>  <td align="left">
- 	   <span class="style16" ><b>Teaching </b><br> <span class="auto-style6">
-		<a <font="" href="http://tau-cm2013.wikidot.com/" size="2">Computational 
-		Model (Spring 13)</a>,
-		<a <font="" href="Courses/FOC/Spring13/index.html" size="2">Foundation 
-		of Cryptography (Spring 13)</a></span></span><br></tr>
- </table>
-
+          
 
 
 <table class="style13" style="margin-left:30px; width: 71%; height: 201px;" border="0" cellpadding="8" cellspacing="1">
@@ -647,10 +636,6 @@ We make progress towards answering the above fundamental question, showing that
  
 .auto-style2 {
 	color: #0000FF;
-}
-.auto-style6 {
-	color: #000000;
-	font-size: small;
 }
 .auto-style7 {
 	direction: ltr;
